# nanobot

./: .gitignore  README.md  SECURITY.md  pyproject.toml
agent/: __init__.py  context.py  loop.py  skills.py  subagent.py
agent/tools/: __init__.py  filesystem.py  mcp.py  registry.py  shell.py  spawn.py  web.py
cli/: commands.py
config/: __init__.py  loader.py  paths.py  schema.py
nanobot/: __init__.py
nanobot/agent/: __init__.py  context.py  loop.py  subagent.py
nanobot/agent/tools/: mcp.py  web.py
nanobot/cli/: commands.py
nanobot/config/: __init__.py  paths.py  schema.py
nanobot/providers/: __init__.py  litellm_provider.py  registry.py
nanobot/session/: manager.py
nanobot/templates/: AGENTS.md  TOOLS.md
nanobot/utils/: helpers.py
providers/: __init__.py  base.py  gemini_provider.py  litellm_provider.py
session/: __init__.py  manager.py
skills/: README.md
templates/: HEARTBEAT.md  SOUL.md  USER.md
tests/: test_cli_input.py  test_commands.py  test_config_paths.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_loop_save_turn.py  test_mcp_tool.py  test_tool_validation.py
utils/: __init__.py  helpers.py
