[project]
name = "nanobot-ai"
version = "0.1.4.post4"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

[project.scripts]
nanobot = "cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli", "config", "providers", "session", "skills", "templates", "utils"]

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "agent/**/*.py",
    "cli/**/*.py",
    "config/**/*.py",
    "providers/**/*.py",
    "session/**/*.py",
    "utils/**/*.py",
    "templates/**/*.md",
    "skills/**/*.md",
    "skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "agent/",
    "cli/",
    "config/",
    "providers/",
    "session/",
    "skills/",
    "templates/",
    "utils/",
    "main.py",
    "README.md",
    "LICENSE",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
